src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>EnerSy Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Big_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select event if met individual at a Big Event, otherwise fill in the lead source, event name and date.</inlineHelpText>
        <label>Big Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>EMEA Big Events</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAS_Industry__c</fullName>
        <globalPicklist>Industry</globalPicklist>
        <inlineHelpText>For EAS leads only. EnerSys&apos;s classification of the business&apos;s EAS industry.</inlineHelpText>
        <label>EAS Industry</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Event Date</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <globalPicklist>Gender</globalPicklist>
        <label>Gender</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Role__c</fullName>
        <inlineHelpText>Provide additional information about the individuals role if &apos;Other&apos; is selected.</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.SBU__c,&apos;MP - Americas&apos;), &apos;MP - Americas&apos;, 
IF(ISPICKVAL($User.SBU__c,&apos;MP - EMEA&apos;), &apos;MP - EMEA&apos;, 
IF(ISPICKVAL($User.SBU__c,&apos;RP - Americas&apos;), &apos;RP - Americas&apos;, 
IF(ISPICKVAL($User.SBU__c,&apos;RP - EMEA&apos;), &apos;RP - EMEA&apos;, 
IF(ISPICKVAL($User.SBU__c,&apos;EAS - Americas&apos;), &apos;EAS - Americas&apos;, 
IF(ISPICKVAL($User.SBU__c,&apos;EAS - EMEA&apos;), &apos;EAS - EMEA&apos;, 
NULL))))))</defaultValue>
        <globalPicklist>SBU</globalPicklist>
        <label>SBU</label>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AD_Air_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>AD - Air Leads</label>
        <queue>AD_Air_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AD_Land_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>AD - Land Leads</label>
        <queue>AD_Land_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AD_Sea_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>AD - Sea Leads</label>
        <queue>AD_Sea_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MP_Arab_Countries_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Arab Countries Leads</label>
        <queue>MP_Arab_Countries_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_Austria_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Austria Leads</label>
        <queue>MP_Austria_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_Balkans_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Balkans Leads</label>
        <queue>MP_Balkans_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_Baltic_States_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Baltic States Leads</label>
        <queue>MP_Baltic_States_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_Belgium_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Belgium Leads</label>
        <queue>MP_Belgium_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_Caucasian_Eastern_Countries_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Caucasian &amp; Eastern Countries Leads</label>
        <queue>MP_Caucasian_Eastern_Countries_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_Czech_and_Slovakia_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Czech and Slovakia Leads</label>
        <queue>MP_Czech_and_Slovakia_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_Denmark_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Denmark Leads</label>
        <queue>MP_Denmark_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_Finland_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Finland Leads</label>
        <queue>MP_Finland_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_France_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - France Leads</label>
        <queue>MP_France_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_Germany_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MP - Germany Leads</label>
        <queue>MP_Germany_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>EnerSys_Lead</fullName>
        <active>true</active>
        <businessProcess>EnerSy Lead Process</businessProcess>
        <description>A potential client who is new to EnerSys</description>
        <label>EnerSys Lead</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>One_Lead_Field_is_Mandatory</fullName>
        <active>true</active>
        <description>One lead field must be filled out prior to save (Email, Phone, Mobile)</description>
        <errorConditionFormula>AND(
ISBLANK( MobilePhone ),
ISBLANK( Phone ),
ISBLANK( Email )
)</errorConditionFormula>
        <errorMessage>Must provide an Email or Mobile or Phone in order to Save this Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Field_For_Roles</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				NOT(ISPICKVAL(Role__c, &apos;Other&apos;)),
				NOT(ISBLANK(Other_Role__c)),
			 $User.ProfileId &lt;&gt; $Label.Profile_ID_EnerSys_Integration, 
				$User.ProfileId &lt;&gt; $Label.Profile_ID_EnerSys_System_Administrator, 
				$User.ProfileId &lt;&gt; $Label.Profile_ID_System_Administrator				
				)</errorConditionFormula>
        <errorMessage>Use the &apos;Other&apos; field only for additional text when the Role field is set to Other. Please delete any text in this field or change the role to &apos;Other&apos;.</errorMessage>
    </validationRules>
</CustomObject>